# aws_in_docker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_COVERAGE.md  README.md  SECURITY.md  TODO.md  aws_in_docker.code-workspace  invoke.yaml  pyproject.toml  setup.cfg  tasks.py  tbump.toml
.github/: PULL_REQUEST_TEMPLATE.md  stale.yaml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  question.md
aws_in_docker/: __init__.py  backends.py
aws_in_docker/ec2/: __init__.py  exceptions.py  models.py
contributing/: contributor_setup.sh
debug/: run.ipynb
docker/: Dockerfile
scripts/: merge_to_main.sh
tests/: test_run_instances.py
